<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroductionFragment"
    android:layout_marginTop="50dp"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skinDieting"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>
    <TextView
        android:layout_below="@+id/tvTitle"
        android:id="@+id/tvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainText"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingBottom="5dp"/>

    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMain"
        android:layout_marginTop="-35dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/healthy"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivMain"
        android:layout_marginTop="-46dp"
        android:layout_marginBottom="50dp"
        android:text="@string/footer"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>
</ScrollView>